<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">The Running App</string>
    <string name="title_activity_workout_end">Workout End</string>
    <string name="title_activity_trapp_dbhelper">TrappDBHelper</string>
    <string name="title_activity_trapp_contract">Trapp Contract</string>
    <string name="title_activity_workout_start">Workout Start</string>
    <string name="title_activity_settings">Settings</string>
    <string name="title_activity_workout_display">Workout Display</string>
    <string name="title_activity_interval">Interval</string>
    <string name="title_activity_test_setup">Test Setup</string>
    <string name="title_activity_setup_workout">Workouttype</string>
    <string name="title_activity_history">History</string>
    <string name="title_activity_route_suggestion">Route Suggestion</string>
    <string name="action_settings">Settings</string>
    <string name="S_workout">Start new workout</string>
    <string name="S_settings">Settings</string>
    <string name="S_history">History</string>
    <string name="S_name">Name</string>
    <string name="S_height">Height</string>
    <string name="S_weight">Weight</string>
    <string name="Age">Age</string>
    <string name="S_sex">Gender</string>
    <string name="S_save">Save</string>
    <string name="S_cancel">Cancel</string>
    <string name="hello_world">Hello world!</string>
    <string name="T_test">This is supposed to be here</string>
    <string name="A_norwegian">Nor</string>
    <string name="A_english">Eng</string>
    <string name="A_last_session">Last session</string>
    <string name="A_language">Language</string>
    <string name="T_end_workout_button_string">End workout</string>
    <string name="A_back">Back</string>
    <string name="T_start_workout_button_string">Start</string>
    <string name="T_pause_workout_button_string">Pause</string>
    <string name="A_time_display_string">Time</string>
    <string name="A_distance_display_string">Distance</string>
    <string name="A_date_display_string">Date</string>
    <string name="A_calories_display_string">Calories</string>
    <string name="A_speed_display_string">Speed</string>
    <string name="A_Setup_workout">Workout</string>
    <string name="A_interval">Interval</string>
    <string name="S_test">Start new test</string>
    <string name="A_test">Test</string>
    <string name="S_Time">Time</string>
    <string name="S_Distance">Distance</string>
    <string name="S_Value">Value</string>
    <string name="A_cm">\t\t\tcm</string>
    <string name="A_kilo">\t\t\tkg</string>
    <string name="S_min">Min</string>
    <string name="S_sec">Sec</string>
    <string name="start">Start</string>
    <string name="repetition">Repetition</string>
    <string name="Run">Run</string>
    <string name="Pause">Pause</string>
    <string name="walking">Walking</string>
    <string name="running">Running</string>
    <string name="talking">Sound</string>
    <string name="empty_history">History is empty</string>
    <string name="route_suggestion">Suggest route</string>
    <string name="T_get_routes_string">Get routes</string>
    <string name="T_min_distance_string">Min distance</string>
    <string name="T_max_distance_string">Max distance</string>
    <string name="T_m">m</string>
    <string name="T_kg">kg</string>
    <string name="T_start_suggested_workout">Start this workout</string>

    <string-array name="Gender_array">
        <item>Male</item>
        <item>Female</item>
    </string-array>
    <string-array name="Language_array">
        <item>English</item>
        <item>Norwegian</item>
        <item>For fun</item>
    </string-array>

    

</resources>
