<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="#000000"
    tools:context=".Settings" >
 
	<EditText
        android:id="@+id/editText1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@+id/textView1"
        android:layout_alignBaseline="@+id/textView1"
        android:layout_alignLeft="@+id/editText2"
        android:layout_marginRight="14dp"
        android:layout_marginTop="71dp"
        android:background="#FFFFFF"
        android:ems="10" />

    <EditText
        android:id="@+id/editText2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@+id/textView2"
        android:layout_alignBaseline="@+id/textView2"
        android:background="#FFFFFF"
        android:ems="10" />

    <EditText
        android:id="@+id/editText3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@+id/textView3"
        android:layout_alignBaseline="@+id/textView3"
        android:layout_alignLeft="@+id/editText2"
        android:background="#FFFFFF"
        android:ems="10" />
 
    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView5"
        android:layout_marginTop="25dp"
        android:textColor="#FFFFFF"
        android:text="@string/S_name" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textView1"
        android:layout_below="@+id/textView1"
        android:layout_marginRight="5dp"
        android:layout_marginTop="15dp"
        android:textColor="#FFFFFF"
        android:text="@string/S_height" />
    
    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textView1"
        android:layout_below="@+id/textView2"
        android:layout_marginTop="15dp"
        android:textColor="#FFFFFF"
        android:text="@string/S_weight" />
    
	<TextView
	    android:id="@+id/textView4"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:layout_below="@+id/button1"
	    android:layout_centerHorizontal="true"
	    android:layout_marginTop="50dp"
	    android:textColor="#FFFFFF"
	    android:text="@string/A_language"
	    android:textAppearance="?android:attr/textAppearanceLarge" />

	<TextView
	    android:id="@+id/textView5"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:layout_centerHorizontal="true"
	    android:layout_marginTop="20dp"
	    android:textColor="#FFFFFF"
	    android:text="@string/S_settings"
	    android:textAppearance="?android:attr/textAppearanceLarge" />

	<Button
	    android:id="@+id/button1"
	    android:layout_width="75dp"
	    android:layout_height="50dp"
	    android:layout_below="@+id/textView3"
	    android:layout_marginTop="54dp"
	    android:layout_toLeftOf="@+id/textView5"
	    android:background="#FF808080"
	    android:textColor="#FFFFFF00"
	    android:onClick="save"
	    android:text="@string/S_save"
	    android:textSize="20sp" />

	<Button
	    android:id="@+id/button2"
	    android:layout_width="95dp"
	    android:layout_height="50dp"
	    android:layout_alignBottom="@+id/button1"
	    android:layout_toRightOf="@+id/textView5"
	    android:background="#FF808080"
	    android:textColor="#FFFFFF00"
	    android:onClick="cancel"
	    android:text="@string/S_cancel"
	    android:textSize="20sp" />

	<Button
	    android:id="@+id/button_norwegian"
	    android:layout_width="70dp"
	    android:layout_height="50dp"
	    android:layout_below="@+id/textView4"
	    android:layout_marginTop="20dp"
	    android:layout_centerHorizontal="true"
	    android:background="#FF808080"
	    android:textColor="#FFFFFF00"
	    android:onClick="norwegian"
	    android:text="@string/A_norwegian"
	    android:textSize="20sp" />
	
	<Button
	    android:id="@+id/button_english"
	    android:layout_width="70dp"
	    android:layout_height="50dp"
	    android:layout_marginTop="5dp"
	    android:layout_centerHorizontal="true"
	    android:layout_below="@+id/button_norwegian"
	    android:background="#FF808080"
	    android:textColor="#FFFFFF00"
	    android:onClick="english"
	    android:text="@string/A_english"
	    android:textSize="20sp" />


</RelativeLayout>
