<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FF000000"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".SetupWorkout" >

    <Button
        android:id="@+id/button_route_suggestion"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="20dp"
        android:background="#FF808080"
        android:onClick="routeSuggestion"
        android:text="@string/route_suggestion"
        android:textColor="#FFFFFF00" />

    <Button
        android:id="@+id/button_walk"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@id/button_route_suggestion"
        android:layout_below="@id/button_route_suggestion"
        android:layout_marginBottom="20dp"
        android:background="#FF808080"
        android:onClick="walk"
        android:text="@string/walking"
        android:textColor="#FFFFFF00" />

    <Button
        android:id="@+id/button_running"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@id/button_walk"
        android:layout_below="@id/button_walk"
        android:layout_marginBottom="20dp"
        android:background="#FF808080"
        android:onClick="running"
        android:text="@string/running"
        android:textColor="#FFFFFF00" />

    <Button
        android:id="@+id/button_interval"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@id/button_running"
        android:layout_below="@id/button_running"
        android:layout_marginBottom="20dp"
        android:background="#FF808080"
        android:onClick="intervalSetup"
        android:text="@string/A_interval"
        android:textColor="#FFFFFF00"
        android:textSize="20sp" />

    <Button
        android:id="@+id/button_test_start"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@id/button_interval"
        android:layout_below="@id/button_interval"
        android:background="#FF808080"
        android:onClick="testStart"
        android:text="@string/S_test"
        android:textColor="#FFFFFF00" />

</RelativeLayout>