<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".TestSetup" >

    
    <RadioGroup 
        android:id="@+id/A_radiogroup"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >
        
    <RadioButton
        android:id="@+id/Button_Time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="31dp"
        android:onClick="onRadioButtonClicked"
        android:text="@string/S_Time" />
    
    <RadioButton
        android:id="@+id/Button_Distance"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="onRadioButtonClicked"
        android:text="@string/S_Distance" />
	</RadioGroup>

    <TextView
        android:id="@+id/Distance"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/A_radiogroup"
        android:layout_marginTop="22dp"
        android:text="@string/S_Distance"
		android:visibility="gone"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <EditText
        android:id="@+id/distance"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
		android:layout_toRightOf="@id/Distance"
        android:layout_alignBaseline="@id/Distance"
		android:visibility="gone"
        android:layout_alignRight="@+id/A_radiogroup"
        android:inputType="number"
        android:ems="10" >

        <requestFocus />
    </EditText>

    <TextView
        android:id="@+id/Time_Min"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/A_radiogroup"
        android:layout_marginTop="20dp"
        android:visibility="gone"
        android:text="@string/S_min"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/Time_sec"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/Time_Min"
        android:layout_marginTop="20dp"
        android:visibility="gone"
        android:text="@string/S_sec"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <EditText
        android:id="@+id/sec"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
		android:layout_toRightOf="@id/Time_sec"
        android:layout_alignBaseline="@id/Time_sec"
        android:ems="10"
        android:visibility="gone"
        android:hint="sec"
        android:inputType="number" />

    <EditText
        android:id="@+id/min"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/Time_Min"
        android:layout_toRightOf="@+id/Time_Min"
        android:ems="10"
        android:visibility="gone"
        android:hint="min"
        android:inputType="number" />

    <Button
        android:id="@+id/start"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/A_radiogroup"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="28dp"
        android:onClick="starttest"
        android:text="@string/start" />

</RelativeLayout>
