<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="#FF000000"
    tools:context=".MainActivity" >    
    
    <Button
        android:id="@+id/button_settings"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/button_history"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="20dp"
        android:background="#FF808080"
	    android:textColor="#FFFFFF00"
        android:onClick="settings"
        android:text="@string/S_settings" />

    <Button
        android:id="@+id/button_history"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_above="@+id/button_settings"
        android:layout_alignLeft="@+id/button_setup_workout"
        android:layout_marginBottom="20dp"
        android:background="#FF808080"
	    android:textColor="#FFFFFF00"
        android:onClick="history"
        android:text="@string/S_history" />

    <Button
        android:id="@+id/button_setup_workout"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_above="@+id/button_history"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="20dp"
        android:background="#FF808080"
	    android:textColor="#FFFFFF00"
        android:onClick="StartSetupWorkout"
        android:text="@string/A_Setup_workout" />

    <ImageView
        android:id="@+id/image"
        android:layout_width="250dp"
        android:layout_height="250dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:src="@drawable/icon_running_man" />

</RelativeLayout>
