<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent" 
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="#FF000000"
    tools:context=".Interval" >
    
    <RadioGroup 
        android:id="@+id/A_radiogroup_interval"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="65dp"
        android:orientation="horizontal" >
        
        <RadioButton
        	android:id="@+id/A_radiobutton_time"
        	android:layout_width="wrap_content"
       		android:layout_height="wrap_content"
       		android:textColor="#FFFFFFFF"
       		android:onClick="onRadioButtonClicked"
       		android:checked="true"
       	 	android:text="@string/A_time_display_string" />
    
   		 <RadioButton
        	android:id="@+id/A_radiobutton_distance"
        	android:layout_width="wrap_content"
        	android:layout_height="wrap_content"
        	android:textColor="#FFFFFFFF"
        	android:onClick="onRadioButtonClicked"
        	android:text="@string/A_distance_display_string" />
	</RadioGroup>

    <EditText
        android:id="@+id/editText_name_interval"
        android:layout_width="163dp"
        android:layout_height="wrap_content"
        android:background="#FFFFFFFF"
        android:inputType="text"
        android:layout_below="@id/A_radiogroup_interval"
        android:layout_centerHorizontal="true" />
    
    <TextView 
        android:id="@+id/textView_name_interval"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="#FFFFFFFF"
        android:layout_alignBaseline="@id/editText_name_interval"
        android:text="@string/S_name"/>
    
    <EditText
        android:id="@+id/editText_time_run_interval"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:background="#FFFFFFFF"
        android:inputType="number"
        android:layout_marginTop="14dp"
        android:layout_below="@id/editText_name_interval"
        android:layout_alignLeft="@id/editText_name_interval" />
    
    <TextView 
        android:id="@+id/textView_time_run_interval"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="#FFFFFFFF"
        android:layout_alignBaseline="@id/editText_time_run_interval"
        android:text="@string/Run" />
    
    <EditText
        android:id="@+id/editText_time_pause_interval"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:background="#FFFFFFFF"
        android:inputType="number"
        android:layout_marginTop="14dp"
        android:layout_below="@id/editText_time_run_interval"
        android:layout_alignLeft="@id/editText_time_run_interval" />
    
    <TextView 
        android:id="@+id/textView_time_pause_interval"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="#FFFFFFFF"
        android:layout_alignBaseline="@id/editText_time_pause_interval"
        android:text="@string/Pause" />
    
    <EditText 
        android:id="@+id/editText_distance_run_interval"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:background="#FFFFFFFF"
        android:inputType="number"
        android:layout_marginTop="14dp"
        android:visibility="gone"
        android:layout_below="@id/editText_name_interval"
        android:layout_alignLeft="@id/editText_name_interval" />
    
    <TextView 
        android:id="@+id/textView_distance_run_interval"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="#FFFFFFFF"
        android:layout_alignBaseline="@id/editText_distance_run_interval"
        android:visibility="gone"
        android:text="@string/Run" />
    
    <TextView
    	android:id="@+id/textView_distance_run_meter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="#FFFFFFFF"
        android:layout_alignBaseline="@id/editText_distance_run_interval"
        android:layout_toRightOf="@id/editText_distance_run_interval"
        android:layout_marginLeft="5dp"
        android:visibility="gone"
        android:text="@string/T_m" />
    
    <EditText 
        android:id="@+id/editText_distance_pause_interval"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:background="#FFFFFFFF"
        android:inputType="number"
        android:layout_marginTop="14dp"
        android:visibility="gone"
        android:layout_below="@id/editText_distance_run_interval"
        android:layout_alignLeft="@id/editText_distance_run_interval" />
        
    <TextView 
        android:id="@+id/textView_distance_pause_interval"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="#FFFFFFFF"
        android:layout_alignBaseline="@id/editText_distance_pause_interval"
        android:visibility="gone"
        android:text="@string/Pause" />
    
    <TextView 
        android:id="@+id/textView_distance_pause_meter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="#FFFFFFFF"
        android:layout_alignBaseline="@id/editText_distance_pause_interval"
        android:layout_toRightOf="@id/editText_distance_pause_interval"
        android:layout_marginLeft="5dp"
        android:visibility="gone"
        android:text="@string/T_m" />
    
   <EditText
        android:id="@+id/editText_repetition_interval"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:background="#FFFFFFFF"
        android:inputType="number"
        android:imeOptions="actionDone"
        android:layout_alignLeft="@id/editText_time_pause_interval"
        android:layout_marginTop="150dp"
        android:ems="10" />
    
    <TextView 
        android:id="@+id/textView_repetition_interval"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
	    android:textColor="#FFFFFFFF"
        android:layout_alignBaseline="@id/editText_repetition_interval"
        android:text="@string/repetition" />
    
    <ToggleButton 
        android:id="@+id/ToggleButton_time_run_interval"
        android:layout_width="50dp"
        android:layout_height="25dp"
        android:layout_toRightOf="@id/editText_time_run_interval"
        android:layout_alignBaseline="@id/editText_time_run_interval"
        android:background="#FF808080"
	    android:textColor="#FFFFFF00"
	    android:layout_marginLeft="10dp"
        android:textOn="Min"
        android:textOff="Sec" />

    <ToggleButton 
        android:id="@+id/ToggleButton_time_pause_interval"
        android:layout_width="50dp"
        android:layout_height="25dp"
        android:layout_toRightOf="@id/editText_time_pause_interval"
        android:layout_alignBaseline="@id/editText_time_pause_interval"
        android:background="#FF808080"
	    android:textColor="#FFFFFF00"
		android:layout_marginLeft="10dp"
        android:textOn="Min"
        android:textOff="Sec" />
    
    <Button 
        android:id="@+id/button_save_interval"
        android:layout_width="75dp"
	    android:layout_height="50dp"
	    android:layout_alignParentBottom="true"
	    android:layout_centerHorizontal="true"
	    android:background="#FF808080"
	    android:textColor="#FFFFFF00"
	    android:text="@string/S_save"
	    android:textSize="20sp"
	    android:onClick="save" />
    
    <ListView
        android:id="@+id/listViewInterval"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:layout_below="@id/editText_repetition_interval"
        android:layout_above="@id/button_save_interval"
        android:layout_marginBottom="20dp"
        android:background="#FF808080"
        android:clickable="true" />

</RelativeLayout>
