<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="#FF000000"
    tools:context=".WorkoutEnd" >

    <TextView
        android:id="@+id/date_display"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="50dp"
        android:textColor="#FFFFFFFF"
        android:text="@string/A_date_display_string"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/time_display"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_below="@+id/date_display"
        android:layout_marginTop="20dp"
        android:textColor="#FFFFFFFF"
        android:text="@string/A_time_display_string"
        android:textAppearance="?android:attr/textAppearanceMedium" />
    
    <TextView
        android:id="@+id/distance_display"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_below="@+id/time_display"
        android:layout_marginTop="20dp"
        android:textColor="#FFFFFFFF"
        android:text="@string/A_distance_display_string"
        android:textAppearance="?android:attr/textAppearanceMedium" />
    
    <TextView
        android:id="@+id/calories_display"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_below="@id/distance_display"
        android:layout_marginTop="20dp"
        android:textColor="#FFFFFFFF"
        android:text="@string/A_calories_display_string"
        android:textAppearance="?android:attr/textAppearanceMedium" />
    
    <TextView
        android:id="@+id/textdate_display"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="5dp"
        android:textColor="#FFFFFFFF"
        android:layout_toRightOf="@id/date_display"
        android:layout_alignBaseline="@id/date_display" />

        <TextView 
        android:id="@+id/textworkouttype_display"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
    
    <TextView
        android:id="@+id/textcalories_display"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="5dp"
        android:textColor="#FFFFFFFF"
        android:layout_toRightOf="@id/calories_display"
        android:layout_alignBaseline="@id/calories_display" />

    <TextView
        android:id="@+id/textdistance_display"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="5dp"
        android:textColor="#FFFFFFFF"
        android:layout_toRightOf="@id/distance_display"
        android:layout_alignBaseline="@id/distance_display" />

    <TextView
        android:id="@+id/texttime_display"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="5dp"
        android:textColor="#FFFFFFFF"
        android:layout_toRightOf="@id/time_display"
        android:layout_alignBaseline="@id/time_display" />
    
</RelativeLayout>
